# dotfiles

./: .gitignore  CMakeLists.txt  README.md  ackrc  bashrc  common  config_bash.sh  config_git.sh  config_vim.sh  config_zsh.sh  ctags  gitignore  idea  idea.md  init.lua  install.sh  install_python.sh  iterm2-italics.sh  macos  macos.sh  make_symlink.sh  makefile  safari.css  settings.json  tips  vimrc  ycm_extra_conf.py  zshrc  zshrc.sh
cheatsheet/: core.py  crc.c  gcc.c  img_proc.c  macro.c  pandas.py  recursive.c  scanner.py  sort.c
conf/: .clang-format  ackrc  astylerc  coc-settings.json  ctags  flake8  ginit.vim  gitignore  pylintrc  pyrightconfig.json  ripgreprc  tmux.conf  ycm_extra_conf.py
etc/: sis_TheKeyV2.json
script/: 00_install_macapp.sh  01_install_dev.sh  02_install_shell.sh  02_install_zsh.sh  03_configure_vim.sh  03_install_python.sh  04_configure_symlink.sh  05_configure_git.sh  05_configure_symlink.sh  06_install_python.sh  08_vscode.sh  10_configure_macos.sh  11_configure_macos.sh  11_install_macapp.sh  11_install_macapps.sh  12_configure_macos.sh  19_folx.py  1_install_dev.sh  20_install_ubuntuapp.sh  20_install_winapp.bat  21_install_ubuntuapp.sh  22_configure_terminal.sh  30_install_ubuntuapp.sh  31_configure_symlink.bat  31_install_winapp.bat  32_configure_symlink.bat  32_install_python.bat  35_configure_symlink.bat  36_organize_mypc.bat  37_configure_icons.bat  38_organize_mypc.bat  39_renew_bc.bat  39_windows-ip-shift.bat  41_install_vscode_extensions.py  42_requirements.txt  4_set_symlink.sh  5_config_git.sh  6_install_python.sh  config-git  (+26 more)
(+49 files in other folders)
